--- a/Product.css
+++ b/Product.css
@@ -666,6 +666,7 @@ body {
 	position: sticky;
 	top: 0px;
 	z-index: 1;
+	align-items: center;
 }
 .findSeller{
 	font-size: 15px;
@@ -711,8 +712,8 @@ body {
 
 .mobileScreenDivisionButton1{
 	width: 49.6%;
+	height: 8vw;
 	background-color: white;
-	padding: 25px 0px;
 	color: black;
 	border: none;
 	font-family: 'Times New Roman', Times, serif;
@@ -721,9 +722,9 @@ body {
 
 }
 .mobileMcreenDivisionButton2{
-	width: 49.6%;	
+	width: 49.6%;
+	height: 8vw;	
 	background-color: #e4b723;
-	padding: 25px 0px;
 	border: none;
 	font-family: 'Times New Roman', Times, serif;
 	font-size: x-large;
@@ -735,6 +736,20 @@ body {
 	bottom: 0px;
 	position: fixed;
 	z-index: 1;
+}
+
+.mobileAdvImage{
+	width: 18vw;
+	height: 18vw;
+}
+
+.mobileAdvProductName{
+	font-size: 4vw;
+}
+
+.mobileFlipkartAssured{
+	width: 10vw;
+	height: 5vw;
 }
 
 @media screen and (max-width:890px){
@@ -760,7 +775,7 @@ body {
 }
 
 
-@media screen and (max-width:768px){
+@media screen and (max-width:770px){
 	body{
 		background-color:white;
 	}
@@ -803,7 +818,12 @@ body {
 	}
 
 	.productCardDetails{
-		text-align: center;
+		text-align: left;
+		font-family: 'Times New Roman', Times, serif;
+	}
+
+	.productCardDetails *{
+		font-family: 'Times New Roman', Times, serif;
 	}
 
 	.intrestedProductDiv{
@@ -824,5 +844,15 @@ body {
 	.intrestedProductButton{
 		width: 100%;
 		font-size: x-large;
+	}
+	.aboutTheProduct *{
+		font-family: 'Times New Roman', Times, serif;
+		font-size: 18px;
+	}
+
+	.productMobileImage{
+		width: 90vw;
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
